Work on myWork section, titles, descriptions, shading and links

--- a/index.html
+++ b/index.html
@@ -47,36 +47,37 @@
             <figure class="portfolio-item featured">
                 <img src="assets/images/investmentWiz.jpg" alt="A web page for the Investment Wizard that shows stock data, a graph and news articles">
                 <figcaption>
-                    <h2 class="portfolio-title">Project Name</h2>
-                    <p class="portfolio-desc">A short description</p>
-                    <a href="#" class="porfolio-link">More info</a>
+                    <h2 class="portfolio-title">Investment Dashboard</h2>
+                    <p class="portfolio-desc">This one-page application will allow novice investors in the stock market to see a quick run down of the most important information for them to make an informed decision on whether they should invest their money in a certain stock.
+                    </p>
+                    <a href="https://mark-artim.github.io/investment-wizard/" class="portfolio-link">More info</a>
                 </figcaption>
             </figure>
             <!-- Portfolio Item #2 -->
             <figure class="portfolio-item">
                 <img src="assets/images/weatherDash.jpg" alt="A web page for the Weather Dashboard that shows the current weather and a five day forecast">
                 <figcaption>
-                    <h2 class="portfolio-title">Project Name</h2>
-                    <p class="portfolio-desc">A short description</p>
-                    <a href="#" class="porfolio-link">More info</a>
+                    <h2 class="portfolio-title">Weather Dashboard</h2>
+                    <p class="portfolio-desc">A weather application that allows you to search cities and see teh current weather along with the five day forecast.</p>
+                    <a href="https://mark-artim.github.io/WeatherDashboard/" class="portfolio-link">More info</a>
                 </figcaption>
             </figure>
             <!-- Portfolio Item #3 -->
             <figure class="portfolio-item">
                 <img src="assets/images/codeQuiz.jpg" alt="A web page for a code quiz with a question, 4 possible answers and a timer counting down">
                 <figcaption>
-                    <h2 class="portfolio-title">Project Name</h2>
-                    <p class="portfolio-desc">A short description</p>
-                    <a href="#" class="porfolio-link">More info</a>
+                    <h2 class="portfolio-title">Code Quiz Challenge</h2>
+                    <p class="portfolio-desc">This application tests a users knowledge of web development as they race against the clock to get their initials on the leader-board.</leader-board></p>
+                    <a href="https://mark-artim.github.io/CodeQuiz/" class="portfolio-link">More info</a>
                 </figcaption>
             </figure>
             <!-- Portfolio Item #4 -->
             <figure class="portfolio-item">
                 <img src="assets/images/madotcom.jpg" alt="A web page for Mark Artim dot com that has pictures of Mark and friends and links to other pages">
                 <figcaption>
-                    <h2 class="portfolio-title">Project Name</h2>
-                    <p class="portfolio-desc">A short description</p>
-                    <a href="#" class="porfolio-link">More info</a>
+                    <h2 class="portfolio-title">My Personal Website</h2>
+                    <p class="portfolio-desc">An AWS hosted site where I host conceptual ideas for future web developement.</p>
+                    <a href="https://www.markartim.com" class="portfolio-link">More info</a>
                 </figcaption>
             </figure>
         <section class="contact">
