Add link transition for myWork section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <img src="assets/images/investmentWiz.jpg" alt="A web page for the Investment Wizard that shows stock data, a graph and news articles">
                 <figcaption>
                     <h2 class="portfolio-title">Investment Dashboard</h2>
-                    <p class="portfolio-desc">This one-page application will allow novice investors in the stock market to see a quick run down of the most important information for them to make an informed decision on whether they should invest their money in a certain stock.
+                    <p class="portfolio-desc">This application allows novice investors to see a quick run down of the most important information to make an informed decision on investing their money in a certain stock.
                     </p>
                     <a href="https://mark-artim.github.io/investment-wizard/" class="portfolio-link">More info</a>
                 </figcaption>
