Fix typo in about me paragraph

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2 class="about-subtitle">Full Stack Developer</h2>
         <div class="about-text">
             <p>I have been around wholesale distribution for most of my life. After working in a distributor for five years after college I joined the software company that we had implmented to run our business. I did implementation consulting for eight years and then wanting to have more impact on the software I joined Product Management and never looked back.</p>
-            <p> I now look forward to utilizing the knowledge gained over 30 years and creating software that is deep enough in functionality to solve the complex problems wehn running a business yet is easy to understand. Software that is transparent in configuration and what it designed to do. Balancing a tailored solution that fits your business with the abiltiy to extend it when you need to solve new probelms or old probelms in a new way.</p>
+            <p> I now look forward to utilizing the knowledge gained over 30 years and creating software that is deep enough in functionality to solve the complex problems when running a business yet is easy to understand. Software that is transparent in configuration and what it designed to do. Balancing a tailored solution that fits your business with the abiltiy to extend it when you need to solve new probelms or old probelms in a new way.</p>
         </div>
     </section>
     
