--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Mark Artim</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favIcon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
@@ -107,9 +107,6 @@
         <footer>
             <p>Follow me on social media</p>
             <div class="social-icons">
-                <!-- <img src="/assets/images/github.png" alt="github icon" class="social-icon">
-                <img src="/assets/images/linkedin.png" alt="linked in icon" class="social-icon">
-                <img src="/assets/images/instagram.png" alt="instagram icon" class="social-icon"> -->
                 <a href="https://github.com/mark-artim">
                     <img alt="Github" src="/assets/images/github.png"
                     class="social-icon">
@@ -122,8 +119,10 @@
                     <img alt="Instagram" src="/assets/images/instagram.png"
                     class="social-icon">
                 </a>
-
             </div>
+            <a href="/assets/images/Resume.pdf" class="resume">My Resume</a>
+            <br><br><br><br>
+
             <p class="copyright">Copywright 2021 Mark Artim</p>
         </footer>
     
