--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
             <p>Follow me on social media</p>
             <div class="social-icons">
                 <a href="https://github.com/mark-artim">
-                    <img alt="Github" src="/assets/images/github.png"
+                    <img alt="Github" src="assets/images/github.png"
                     class="social-icon">
                 </a>
                 <a href="https://www.linkedin.com/in/mark-artim">
-                    <img alt="Linkedin" src="/assets/images/linkedin.png" 
+                    <img alt="Linkedin" src="assets/images/linkedin.png" 
                     class="social-icon">
                 </a>
                 <a href="https://www.instagram.com/markartim/">
-                    <img alt="Instagram" src="/assets/images/instagram.png"
+                    <img alt="Instagram" src="assets/images/instagram.png"
                     class="social-icon">
                 </a>
             </div>
