fixed a type in portfolio item #2 description

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img src="assets/images/weatherDash.jpg" alt="A web page for the Weather Dashboard that shows the current weather and a five day forecast">
                 <figcaption>
                     <h2 class="portfolio-title">Weather Dashboard</h2>
-                    <p class="portfolio-desc">A weather application that allows you to search cities and see teh current weather along with the five day forecast.</p>
+                    <p class="portfolio-desc">A weather application that allows you to search cities and see the current weather along with the five day forecast.</p>
                     <a href="https://mark-artim.github.io/WeatherDashboard/" class="portfolio-link">More info</a>
                 </figcaption>
             </figure>
