attempt to fix resume path

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     class="social-icon">
                 </a>
             </div>
-            <a href="/assets/images/Resume.pdf" class="resume">My Resume</a>
+            <a href="assets/images/Resume.pdf" class="resume">My Resume</a>
             <br><br><br><br>
 
             <p class="copyright">Copywright 2021 Mark Artim</p>
