--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <h1 class="about-title">Mark Artim</h1>
         <h2 class="about-subtitle">Full Stack Developer</h2>
         <div class="about-text">
-            <p>I have been around wholesale distribution for most of my life. After working in a distributor for five years after college I joined the software company that we had implmented to run our business. I did implementation consulting for eight years and then wanting to have more impact on the software I joined Product Management and never looked back.</p>
-            <p> I now look forward to utilizing the knowledge gained over 30 years and creating software that is deep enough in functionality to solve the complex problems when running a business yet is easy to understand. Software that is transparent in configuration and what it designed to do. Balancing a tailored solution that fits your business with the abiltiy to extend it when you need to solve new probelms or old probelms in a new way.</p>
+            <p>I have been around wholesale distribution for most of my life. After working at a distributor for five years after college I joined the software company that we had implemented to run the business. I did implementation consulting for eight years and then wanting to have more impact on the software I joined Product Management and never looked back.</p>
+            <p> I now look forward to utilizing the knowledge gained over 30 years and creating software that is deep enough in functionality to solve the complex needs of running a business yet is easy to understand. Software that is transparent in configuration and what it designed to do. Balancing a tailored solution that fits your business with the abiltiy to extend it when you need to solve new probelms or old problems in a new way.</p>
         </div>
     </section>
     
@@ -47,39 +47,70 @@
             <h1>My Work</h1>
             <!-- Portfolio Item #1 -->
             <figure class="portfolio-item featured">
-                <img src="assets/images/investmentWiz.jpg" alt="A web page for the Investment Wizard that shows stock data, a graph and news articles">
+                <img src="assets/images/jenshens.png" alt="A web page for an ecommerce site that caters to Artisinal Egg Boutiques aka people who have chickens and sell eggs">
                 <figcaption>
-                    <h2 class="portfolio-title">Investment Dashboard</h2>
-                    <p class="portfolio-desc">This application allows novice investors to see a quick run down of the most important information to make an informed decision on investing their money in a certain stock.
+                    <h2 class="portfolio-title">Jenn's Hens Ecommerce Site</h2>
+                    <p class="portfolio-desc">This is an ecommerce site that caters to the needs of Artisinal Egg Boutiques aka people who have chickens and want to sell their eggs.
                     </p>
-                    <a href="https://mark-artim.github.io/investment-wizard/" class="portfolio-link">More info</a>
+                    <ul class="portfolio-desc">Technology Used
+                        <li>HTML, CSS & JavaScript</li>
+                        <li>Handlebars Template Engine</li>
+                        <li>Materialize Framework</li>
+                        <li>MySql database</li>
+                        <li>Express JS/Express Session</li>
+                        <li>Paypal Payment Structure</li>
+                        <li>Instagram API Gallery</li>
+                      </ul>
+                    <a href="https://secure-ravine-09245.herokuapp.com/" class="portfolio-link">Site Link</a>
                 </figcaption>
             </figure>
             <!-- Portfolio Item #2 -->
+            <figure class="portfolio-item">
+                <img src="assets/images/techblog.jpg" alt="A web page posting tech related topics for discussion ">
+                <figcaption>
+                    <h2 class="portfolio-title">Tech Blog</h2>
+                    <p class="portfolio-desc">A web page posting tech related topics for discussion. Supports user registration and login capabilities on a keroku hosted site.</p>
+                    <ul class="portfolio-desc">Technology Used
+                        <li>HTML, CSS & JavaScript</li>
+                        <li>Handlebars Template Engine</li>
+                        <li>Materialize Framework</li>
+                        <li>MySql database</li>
+                        <li>Express JS/Express Session</li>
+                      </ul>
+                    <a href="https://serene-gorge-88856.herokuapp.com/" class="portfolio-link">Site Link</a>
+                </figcaption>
+            </figure>
+            <!-- Portfolio Item #3 -->
             <figure class="portfolio-item">
                 <img src="assets/images/weatherDash.jpg" alt="A web page for the Weather Dashboard that shows the current weather and a five day forecast">
                 <figcaption>
                     <h2 class="portfolio-title">Weather Dashboard</h2>
                     <p class="portfolio-desc">A weather application that allows you to search cities and see the current weather along with the five day forecast.</p>
-                    <a href="https://mark-artim.github.io/WeatherDashboard/" class="portfolio-link">More info</a>
+                    <ul class="portfolio-desc">Technology Used
+                        <li>HTML, CSS & JavaScript</li>
+                        <li>Bootstrap CSS</li>
+                        <li>Fetch api calls to openweather</li>
+                        <li>User history stored in local storage</li>
+                      </ul>
+                    <a href="https://mark-artim.github.io/WeatherDashboard/" class="portfolio-link">Site Link</a>
                 </figcaption>
             </figure>
-            <!-- Portfolio Item #3 -->
+            <!-- Portfolio Item #3
             <figure class="portfolio-item">
                 <img src="assets/images/codeQuiz.jpg" alt="A web page for a code quiz with a question, 4 possible answers and a timer counting down">
                 <figcaption>
                     <h2 class="portfolio-title">Code Quiz Challenge</h2>
                     <p class="portfolio-desc">This application tests a users knowledge of web development as they race against the clock to get their initials on the leader-board.</leader-board></p>
-                    <a href="https://mark-artim.github.io/CodeQuiz/" class="portfolio-link">More info</a>
+                    <a href="https://mark-artim.github.io/CodeQuiz/" class="portfolio-link">Site Link</a>
                 </figcaption>
-            </figure>
+            </figure> -->
             <!-- Portfolio Item #4 -->
             <figure class="portfolio-item">
                 <img src="assets/images/madotcom.jpg" alt="A web page for Mark Artim dot com that has pictures of Mark and friends and links to other pages">
                 <figcaption>
                     <h2 class="portfolio-title">My Personal Website</h2>
                     <p class="portfolio-desc">An AWS hosted site where I host conceptual ideas for future web developement.</p>
-                    <a href="https://www.markartim.com" class="portfolio-link">More info</a>
+                    <a href="https://www.markartim.com" class="portfolio-link">Site Link</a>
                 </figcaption>
             </figure>
         </div>
@@ -120,7 +151,7 @@
                     class="social-icon">
                 </a>
             </div>
-            <a href="assets/images/Resume.pdf" class="resume">My Resume</a>
+            <a href="assets/images/Resume2.pdf" class="resume">My Resume</a>
             <br><br><br><br>
 
             <p class="copyright">Copywright 2021 Mark Artim</p>
